# trading-api-signalr

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yaml  test.yaml
proto/: AccountsManagerGrpcService.proto
src/: lib.rs  main.rs  markup_utils.rs  settings.rs
src/app/: app.rs  settings.rs
src/bg/: accounts_update_subscriber.rs  bid_ask_subscriber.rs  mappers.rs  mod.rs  pending_persistence_subscriber.rs  positions_persistence_subscriber.rs  price_sender.rs
src/flows/: get_active_positions.rs  get_client_accounts.rs  get_pending_positions.rs  get_trading_settings.rs  mod.rs  process_init.rs  set_active_accounts.rs
src/grpc_clients/: accounts_manager_grpc_client.rs  key_value_grpc_client.rs  mappers.rs  mod.rs  trading_executor_grpc_service.rs
src/sb_listeners/: bid_ask_subscriber.rs  mod.rs
src/services/: bid_ask_aggregator.rs  bid_ask_direction.rs  mod.rs
src/signalr/: mappers.rs  mod.rs  signal_r_message_sender.rs  signalr_connection_context.rs  signalr_message_handler.rs  signalr_message_processor.rs  signalr_messages.rs  start_up.rs  tags.rs
src/signalr/action_subscribers/: init_action_subscriber.rs  mod.rs  ping_action_subscriber.rs  set_active_account_action_subscriber.rs
src/signalr/contracts/: account_signalr_model.rs  active_position_signalr_model.rs  bid_ask_model.rs  bid_ask_signalr_model.rs  init_action_signalr_model.rs  init_signal_r_model.rs  instrument_group.rs  instrument_signalr_model.rs  instruments_group_signalr_model.rs  mod.rs  pending_position_signalr_model.rs  ping_signal_r_model.rs  pong_signal_r_model.rs  price_change_signalr_model.rs  set_active_account_signalr_model.rs  signalr_message_wrapper.rs  signalr_server_error.rs  utils.rs
src/signalr/message_processors/: message_processor_impl.rs  mod.rs  process_active_accounts.rs  process_init.rs  signalr_message_sender.rs
src/signalr/message_processors/flows/: get_trading_info.rs  get_trading_settings.rs  mod.rs
