[package]
name = "trading-api-signalr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.3", features = [
    "macros",
    "grpc",
    "my-service-bus",
    "my-nosql-data-reader-sdk",
    "signal-r",
] }
rest-api-wl-shared = { tag = "0.2.0", git = "https://github.com/my-cfd-platform/rest-api-wl-shared.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

cfd-engine-sb-contracts = { tag = "0.2.4", git = "https://github.com/my-cfd-platform/cfd-engine-sb-contracts.git" }
my-nosql-contracts = { tag = "0.1.18", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }


serde = { version = "*", features = ["derive"] }
serde_json = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
prost = "*"
prost-types = "*"
chrono = "*"

tokio = { version = "*", features = ["full"] }
rust_decimal = "*"
rust_decimal_macros = "*"
serde_repr = "*"

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
