[package]
name = "trading-api-signalr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.5", features = [
    "macros",
    "grpc",
    "my-service-bus",
    "my-nosql-data-reader-sdk",
    "signal-r",
] }
rest-api-wl-shared = { tag = "0.2.3", git = "https://github.com/my-cfd-platform/rest-api-wl-shared.git" }
cfd-engine-sb-contracts = { tag = "0.2.15", git = "https://github.com/my-cfd-platform/cfd-engine-sb-contracts.git" }
my-nosql-contracts = { tag = "0.1.34", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git", features = [
    "isolated-margin",
] }

fx-utils = { tag = "0.1.0", git = "https://github.com/my-cfd-platform/fx-utils.git", features = [
    "isolated-margin",
] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
prost = "*"
prost-types = "*"
chrono = "*"

tokio = { version = "*", features = ["full"] }
rust_decimal = "*"
rust_decimal_macros = "*"
serde_repr = "*"
trade-log = { git = "https://github.com/MyJetTools/trade-log.git", tag = "0.1.7" }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
